cmake_minimum_required(VERSION 3.16)
project(MAZEGEN VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20 CACHE STRING "C++ standard to use")
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(CMAKE_EXPORT_COMPILE_COMMANDS "Generate compile_commands.json" ON)

file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

add_executable(MAZEGEN ${SOURCES})
target_include_directories(MAZEGEN PRIVATE src)